# kafer

./: Cargo.toml  a.ilk  out.txt  test.c
kafer-core/: Cargo.toml
kafer-core/src/: breakpoints.rs  disassembler.rs  error.rs  events.rs  lib.rs  main.rs  stack.rs
kafer-core/src/events/: registers.rs
kafer-core/src/stack/: stack_unwind.rs
query-pdb/: Cargo.toml
query-pdb/src/: code_view.rs  lib.rs  main.rs  parser.rs
src/: breakpoints.rs  events.rs  ffi.rs  lib.rs  main.rs  memory.rs  processes.rs
src/events/: registers.rs
src/stack/: ffi.rs
